<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.rapidsos.era.authentication.phone_number.view.PhoneNumberActivity">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/phone_screen_text"
        android:textColor="@android:color/black" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColorHint="@android:color/darker_gray"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="11"
            tools:ignore="LabelFor"
            tools:text="15555555555" />

    </android.support.design.widget.TextInputLayout>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_authenticate"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvResendPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:foreground="?selectableItemBackground"
        android:padding="5dp"
        android:text="@string/resend_pin"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvTermsAndPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/terms_of_use_and_privacy_policy"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black" />

    <TextView
        android:id="@+id/tvDualSimWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phone_number_activity_dual_sim_warning"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
