<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_login"
        android:title="@string/loginUser" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_account"
        android:title="@string/register" />

</menu>
